@@ -1,3 +1,11 @@
+2010-06-20  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        Remove bogus const qualifiers.
+
+        * platform/mac/PasteboardHelper.h:
+
 2010-06-20  Patrick Gansterer  <paroga@paroga.com>
 
         Reviewed by Kent Tamura.
